--- a/vm-aws/ssh/artifactory-connector.yml
+++ b/vm-aws/ssh/artifactory-connector.yml
@@ -2,7 +2,7 @@ connector:
   name: harness_artifactrepo
   identifier: harness_artifactrepo
   orgIdentifier: default
-  projectIdentifier: default_project
+  projectIdentifier: Test
   type: Artifactory
   spec:
     artifactoryServerUrl: https://harness.jfrog.io/artifactory
