--- a/vm-aws/ssh/service.yml
+++ b/vm-aws/ssh/service.yml
@@ -6,7 +6,7 @@ service:
     spec:
       artifacts:
         primary:
-          primaryArtifactRef: <+input>
+          primaryArtifactRef: Todolist
           sources:
             - spec:
                 connectorRef: harness_artifactrepo
