--- a/vm-aws/ssh/pipeline-ssh-basic.yml
+++ b/vm-aws/ssh/pipeline-ssh-basic.yml
@@ -20,8 +20,8 @@ pipeline:
                 spec:
                   artifacts:
                     primary:
-                      primaryArtifactRef: <+input>
-                      sources: <+input>
+                      primaryArtifactRef: Todolist
+                      sources: Todolist
           environment:
             environmentRef: harnessdevenv
             deployToAll: false
